# Football-AI-Agent-using-OpenAI---FastAPI

./: .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  postman_collection.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/api/: router.py
app/api/v1/endpoints/: agents.py  auth.py  sessions.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: agent.py  message.py  session.py  user.py
app/schemas/: agent.py  session.py  user.py
app/services/: agent_service.py  chat_service.py  openai_service.py  user_service.py
app/tests/: test_chat.py  test_services.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
