[project]
name = "ai-agent-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jose>=1.0.0",
    "openai>=2.30.0",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
